[gd_scene load_steps=10 format=3 uid="uid://u8rghgedkwlb"]

[ext_resource type="Script" path="res://player_1.gd" id="1_p25vu"]
[ext_resource type="PackedScene" uid="uid://ds4h5d435s1o5" path="res://scenes/wheelDel.tscn" id="2_181c7"]
[ext_resource type="PackedScene" uid="uid://wmepkkwgueb" path="res://scenes/wheelTras.tscn" id="3_rh1ws"]
[ext_resource type="Texture2D" uid="uid://d0so3me2npsn3" path="res://Images/Motocross/motoSolaNB.png" id="4_e33j8"]
[ext_resource type="Texture2D" uid="uid://b5qqeccl8y10m" path="res://Images/Motocross/cuello.png" id="4_hptqy"]
[ext_resource type="Texture2D" uid="uid://clbjib5bvwy6j" path="res://Images/Motocross/cuerpo.png" id="5_6p5yq"]
[ext_resource type="Texture2D" uid="uid://cdqibw27e5wqh" path="res://Images/Motocross/casco.png" id="5_yxaf8"]
[ext_resource type="AudioStream" uid="uid://fchltnyts8cw" path="res://Audio/motor2.ogg" id="8_b5ske"]
[ext_resource type="AudioStream" uid="uid://d7qhtyrwtjma" path="res://Audio/caida.mp3" id="9_0uufy"]

[node name="Player1" type="RigidBody2D" groups=["player1"]]
collision_layer = 2
collision_mask = 0
mass = 5.0
gravity_scale = 3.0
script = ExtResource("1_p25vu")

[node name="WheelHolder2" type="PinJoint2D" parent="." groups=["player1"]]
position = Vector2(168, 77)
node_a = NodePath("..")
node_b = NodePath("Wheel2")
bias = 0.5
softness = 1.5

[node name="Wheel2" parent="WheelHolder2" instance=ExtResource("2_181c7")]
mass = 2.0

[node name="WheelHolder" type="PinJoint2D" parent="." groups=["player1"]]
position = Vector2(-163, 77)
node_a = NodePath("..")
node_b = NodePath("Wheel3")
bias = 0.5
softness = 1.5

[node name="Wheel3" parent="WheelHolder" instance=ExtResource("3_rh1ws")]
mass = 2.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-75, -215)
texture = ExtResource("4_hptqy")

[node name="Casco" type="RigidBody2D" parent="." groups=["player1"]]
position = Vector2(-44, -242)
collision_layer = 4
mass = 0.2

[node name="Sprite2D" type="Sprite2D" parent="Casco"]
texture = ExtResource("5_yxaf8")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Casco"]
visible = false
polygon = PackedVector2Array(-14, 30, 14, 52, 27, 36, 26, 24, 18, 16, 29, -8, 33, -18, 31, -29, 8, -43, -17, -50, -40, -44, -50, -30, -52, -10, -50, 5)

[node name="cascoSpring" type="PinJoint2D" parent="Casco"]
node_a = NodePath("..")
node_b = NodePath("../..")
bias = 0.7
softness = 11.0

[node name="neckJoin" type="PinJoint2D" parent="Casco"]
position = Vector2(-39, 29)
node_a = NodePath("..")
node_b = NodePath("../..")
softness = 1.0

[node name="Car" type="Sprite2D" parent="."]
texture = ExtResource("4_e33j8")

[node name="Sprite2D" type="Sprite2D" parent="Car"]
position = Vector2(-25, -106)
texture = ExtResource("5_6p5yq")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." groups=["player1"]]
visible = false
position = Vector2(1, -1)
polygon = PackedVector2Array(-66, 58, 32, 67, 52, 8, 96, -36, 157, 83, 173, 74, 117, -53, 171, -62, 208, -43, 220, -49, 179, -75, 112, -83, 76, -143, 0, -166, -107, -232, -138, -224, -148, -175, -162, -91, -230, -84, -228, -74, -194, -42, -78, 4, -73, 36, -147, 61, -179, 68, -171, 88)

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="EngineSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_b5ske")
volume_db = 4.0
autoplay = true

[node name="Caida" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_0uufy")
volume_db = 7.0

[connection signal="timeout" from="GameOverTimer" to="." method="_on_game_over_timer_timeout"]
